update: 資料共有のお願い.md

--- a/20190619_super_developer_experience_lt/資料添付のお願い.md
+++ b/20190619_super_developer_experience_lt/資料添付のお願い.md
@@ -11,3 +11,5 @@ http://help.connpass.com/participants/presen
 
 それでは、皆様の発表を楽しみにしております。
 
+connpass イベントページ：https://willgate.connpass.com/event/131422/
+
